--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+#preloader {
+  background-image: url(./helper/loader.gif);
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 100;
+}
+
 .headerContainer {
   display: flex;
   flex-direction: row;
