--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #preloader {
-  background-image: url(./helper/loader.gif);
+  /* background-image: url(./helper/loader.gif);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center; */
   width: 100%;
   height: 100vh;
   position: fixed;
