--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,12 @@
 
 .ham {
   margin: 75px 250px 0 0;
-  z-index: 9999;
+  z-index: 99999999999999999999999999999999999999999;
 }
 
 .selected {
-  color: #fff;
+  color: white;
+  z-index: 9999999999999999999999999999999999999999999999999999999999;
 }
 
 .navMenu {
@@ -51,7 +52,7 @@
   height: 100%;
   background-color: #0d0d0d;
   color: white;
-  z-index: 999;
+  z-index: 999999999;
 }
 
 .brandNameNav {
@@ -266,7 +267,7 @@
   text-align: center;
 }
 
-.map{
+.map {
   width: 100%;
   height: 800px;
   margin-top: 100px;
@@ -294,6 +295,15 @@ ul {
 /*Mobile Phone*/
 
 @media (max-width: 767px) {
+  #preloader {
+    background-image: url(./helper/loader.gif);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 80%;
+    height: 100vh;
+    position: fixed;
+    z-index: 100;
+  }
   .headerContainer {
     display: flex;
     flex-direction: row;
@@ -425,7 +435,7 @@ ul {
     margin: 0px 0 0 0;
   }
 
-  .map{
+  .map {
     width: 600px;
     height: 400px;
     margin-top: 100px;
